Prepare for Trino 476