@@ -1,3 +1,5 @@
 -server
 -Xmx1G
+-XX:+EnableDynamicAgentLoading
 -Djdk.attach.allowAttachSelf=true
+--enable-native-access=ALL-UNNAMED
